# Project_GDG-Hackathon

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: GROUP_A_Om_Pranav.md  GROUP_B_Venkatesh_Vamsi.md  PRD.md  TESTING.md  TRD.md  instructions.md  lessons.md
eval/: build_golden.py  fetch_loghub.py  golden.jsonl  golden_loghub.jsonl  run_eval.py
scripts/: lint.ps1  run.ps1  setup.ps1  test.ps1
scripts/hooks/: pre-commit
src/rawlog_triage/: __init__.py  cli.py  emit.py  ingest.py  interfaces.py  schema.py  triage.py
tasks/: todo.md
tests/: test_pipeline.py  test_schema.py  test_smoke.py  test_triage.py
